# MY_ADK_PROJECT

./: .gitignore  pyproject.toml
agents/: __init__.py
agents/agent1/: agent.py
agents/agent2/: agent.py
